// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate-document should handle invalid document model 1`] = `
{
  "content": [
    {
      "text": "{"type":"https://tools.ietf.org/html/rfc9110#section-15.5.1","title":"One or more validation errors occurred.","status":400,"errors":[{"$.$":["JSON deserialization for type 'Umbraco.Cms.Api.Management.ViewModels.Document.CreateDocumentRequestModel' was missing required properties including: 'documentType'."]},{"$.requestModel":["The requestModel field is required."]}],"traceId":"normalized-trace-id"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`validate-document should validate a valid document 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
